--- a/customers/templates/base_layout/new_layout.html
+++ b/customers/templates/base_layout/new_layout.html
@@ -74,11 +74,11 @@
                 <!-- Dropdown - User Information -->
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                     aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="{% url 'staff:account_update_view' user.id %}">
+                    <a class="dropdown-item" href="">
                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                       Update Account
                     </a>
-                    <a class="dropdown-item" href="{% url 'staff:staff_profile_view' %}?id={{ user.id }}">
+                    <a class="dropdown-item" href="{% url 'customers:profile_view' %}?id={{ user.id }}">
                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                       View Profile
                     </a>
